# GIF-Maker-STONEv2

./: .gitattributes  Cargo.toml  README.md  environment&run.bat  gif_maker_egui.exe - 捷徑.lnk
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffplay-all.html  ffprobe-all.html
src/: main.rs
